# openrag

./: .env.example  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
flows/: gendb_agent.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/components/: knowledge-filter-dropdown.tsx  knowledge-filter-panel.tsx  navigation.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/connectors/: page.tsx
frontend/src/app/contexts/: page.tsx
frontend/src/app/knowledge-sources/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: layout-wrapper.tsx  task-notification-menu.tsx
frontend/src/contexts/: task-context.tsx
securityconfig/: action_groups.yml  config.yml  internal_users.yml  nodes_dn.yml  roles.yml  roles_mapping.yml  tenants.yml
src/: agent.py  app.py  auth_context.py  main.py  session_manager.py
src/api/: auth.py  chat.py  connectors.py  contexts.py  oidc.py  search.py  tasks.py  upload.py
src/config/: settings.py
src/connectors/: base.py  service.py
src/connectors/google_drive/: connector.py  oauth.py
src/models/: processors.py  tasks.py
src/services/: auth_service.py  chat_service.py  contexts_service.py  document_service.py  search_service.py  task_service.py
src/utils/: document_processing.py  gpu_detection.py  process_pool.py
(+1 files in other folders)
