[project]
name = "gendb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentd>=0.2.2",
    "aiofiles>=24.1.0",
    "cryptography>=45.0.6",
    "docling>=2.41.0",
    "google-api-python-client>=2.143.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "opensearch-py[async]>=3.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.20",
    "starlette>=0.47.1",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
#agentd = { path = "/home/tato/Desktop/agentd" }
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true
